attempt to fix blurry on mobile

--- a/styles/Background.module.css
+++ b/styles/Background.module.css
@@ -1,4 +1,6 @@
 .canvas {
   /* for some reason, canvas overflows without this */
   display: block;
+  width: 100vw;
+  height: 100vh;
 }
